[workspace]
members = ["wrowalk", "demo_native", "wrowalk_android/rust"]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
walkers = "0.40.0"
log = "0.4"
egui = "0.31.0"
egui_extras = { version = "0.31.0", features = ["svg"] }
eframe = "0.31.0"
egui-winit = "0.31.0"

[patch.crates-io]
walkers = { git = "https://github.com/podusowski/walkers.git" }
