[package]
name = "demo"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
walkers.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
log.workspace = true
tokio = "1"
reqwest = "0.12.20"
serde = { version = "1.0.219", features = ["derive"] }
csv = "1.3.1"
